Remove OBE files; fix some findbugs errors
[#OCD-2272]